--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
                         </goals>
                         <configuration>
                             <sourceDirs>
-                                <source>src/main/kotlin</source>
+                                <source>src/org.superluigi.yahtzee.main/kotlin</source>
                             </sourceDirs>
                         </configuration>
                     </execution>
